group tasks by users
